--- a/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj
+++ b/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\FIAP.TECH.CORE.APPLICATION\FIAP.TECH.CORE.APPLICATION.csproj" />
   </ItemGroup>
 
 </Project>
