--- a/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH/appsettings.json
+++ b/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=FIAP-Fase1;Integrated Security=True;MultipleActiveResultSets=True"
+  },
+  "TokenSettings": {
+    "Secret": "36cf9fa24a431a01e0004acdade656db"
   }
 }
