--- a/src/FIAP.TECH.CORE.APPLICATION/FIAP.TECH.CORE.APPLICATION.csproj
+++ b/src/FIAP.TECH.CORE.APPLICATION/FIAP.TECH.CORE.APPLICATION.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FIAP.TECH.CORE.DOMAIN\FIAP.TECH.CORE.DOMAIN.csproj" />
+    <ProjectReference Include="..\FIAP.TECH.INFRASTRUCTURE\FIAP.TECH.INFRASTRUCTURE.csproj" />
+  </ItemGroup>
+
 </Project>
