--- a/src/FIAP.TECH.API/appsettings.json
+++ b/src/FIAP.TECH.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=FIAP-Fase1;Integrated Security=True;MultipleActiveResultSets=True"
+    "ConnectionString": "Server=SqlServerDb; Database=FIAP-Fase1; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
   }
 }
