--- a/src/FIAP.TECH.AUTH/appsettings.json
+++ b/src/FIAP.TECH.AUTH/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=FIAP-Fase1;Integrated Security=True;MultipleActiveResultSets=True"
+    "ConnectionString": "Server=SqlServerDb; Database=FIAP-Fase1; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
   },
   "TokenSettings": {
     "Secret": "36cf9fa24a431a01e0004acdade656db"
