--- a/src/FIAP.TECH.API/appsettings.json
+++ b/src/FIAP.TECH.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnectionString": "Server=SqlServerDb; Database=FIAP-Fase1; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
+  },
+  "TokenSettings": {
+    "Secret": "36cf9fa24a431a01e0004acdade656db"
   }
 }
