--- a/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj
+++ b/src/FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>1f205a0c-afc2-4587-9fd5-b989007ba73c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
-    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
