--- a/src/FIAP.TECH.AUTH/Dockerfile
+++ b/src/FIAP.TECH.AUTH/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["FIAP.TECH.AUTH/FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj", "FIAP.TECH.AUTH/FIAP.TECH.AUTH/"]
+COPY ["FIAP.TECH.AUTH/FIAP.TECH.AUTH.csproj", "FIAP.TECH.AUTH/FIAP.TECH.AUTH/"]
 COPY ["FIAP.TECH.CORE.APPLICATION/FIAP.TECH.CORE.APPLICATION.csproj", "FIAP.TECH.CORE.APPLICATION/"]
 COPY ["FIAP.TECH.CORE.DOMAIN/FIAP.TECH.CORE.DOMAIN.csproj", "FIAP.TECH.CORE.DOMAIN/"]
 COPY ["FIAP.TECH.INFRASTRUCTURE/FIAP.TECH.INFRASTRUCTURE.csproj", "FIAP.TECH.INFRASTRUCTURE/"]
