--- a/src/FIAP.TECH.AUTH/appsettings.json
+++ b/src/FIAP.TECH.AUTH/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=SqlServerDb; Database=FIAP-Fase1; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
+    "ConnectionString": "Server=192.168.15.9,8000; Database=FIAP-Fase1; User Id=sa; Password=passDBFIADP#2024;MultipleActiveResultSets=true; Trust Server Certificate=True;"
   },
   "TokenSettings": {
     "Secret": "36cf9fa24a431a01e0004acdade656db"
