--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,35 +8,37 @@ services:
              - 8000:1433
          environment:
              - ACCEPT_EULA=Y
-             - MSSQL_SA_PASSWORD=myStong_Password123# 
+             - MSSQL_SA_PASSWORD=passDBFIADP#2024 
 
-    fiap.tech.ui:
-        container_name: FiapUIContainer
-        image: ${DOCKER_REGISTRY-}fiaptechui
-        ports:
-            - 8001:8081 
-        build:
-          context: .
-          dockerfile: FIAP.TECH.UI/Dockerfile
+    # fiap.tech.ui:
+    #     container_name: FiapUIContainer
+    #     image: ${DOCKER_REGISTRY-}fiaptechui
+    #     profiles: [web,web2]
+    #     ports:
+    #         - 8001:8081 
+    #     build:
+    #       context: .
+    #       dockerfile: FIAP.TECH.UI/Dockerfile
 
-    fiap.tech.api:
-        container_name: FiapAPIContainer
-        image: ${DOCKER_REGISTRY-}fiaptechapi
-        ports:
-            - 8002:8081 
-        build:
-            context: .
-            dockerfile: FIAP.TECH.API/Dockerfile
-        depends_on:
-            - SqlServerDb
+    # fiap.tech.api:
+    #     container_name: FiapAPIContainer
+    #     image: ${DOCKER_REGISTRY-}fiaptechapi
+    #     ports:
+    #         - 8002:8081 
+    #     build:
+    #         context: .
+    #         dockerfile: FIAP.TECH.API/Dockerfile
+    #     depends_on:
+    #         - SqlServerDb
 
-    fiap.tech.auth:
-        container_name: FiapAUTHContainer
-        image: ${DOCKER_REGISTRY-}fiaptechauth
-        ports:
-            - 8003:8081 
-        build:
-          context: .
-          dockerfile: FIAP.TECH.AUTH/Dockerfile   
-        depends_on:
-            - SqlServerDb
+    # fiap.tech.auth:
+    #     container_name: FiapAUTHContainer
+    #     image: ${DOCKER_REGISTRY-}fiaptechauth
+    #     profiles: [web]
+    #     ports:
+    #         - 8003:8081 
+    #     build:
+    #       context: .
+    #       dockerfile: FIAP.TECH.AUTH/Dockerfile   
+    #     depends_on:
+    #         - SqlServerDb
