--- a/src/FIAP.TECH.API/Properties/launchSettings.json
+++ b/src/FIAP.TECH.API/Properties/launchSettings.json
@@ -32,10 +32,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
-      },
+      "sslPort": 8002,
       "publishAllPorts": true,
       "useSSL": true
     }
