--- a/src/FIAP.TECH.UI/Properties/launchSettings.json
+++ b/src/FIAP.TECH.UI/Properties/launchSettings.json
@@ -29,10 +29,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
-      },
+      "sslPort": 8001,
       "publishAllPorts": true,
       "useSSL": true
     }
