--- a/src/FIAP.TECH.TESTS/FIAP.TECH.TESTS.csproj
+++ b/src/FIAP.TECH.TESTS/FIAP.TECH.TESTS.csproj
@@ -10,10 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FIAP.TECH.CORE.APPLICATION\FIAP.TECH.CORE.APPLICATION.csproj" />
+    <ProjectReference Include="..\FIAP.TECH.CORE.DOMAIN\FIAP.TECH.CORE.DOMAIN.csproj" />
   </ItemGroup>
 
   <ItemGroup>
