--- a/src/FIAP.TECH.AUTH/appsettings.json
+++ b/src/FIAP.TECH.AUTH/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=192.168.15.9,8000; Database=FIAP-Fase1; User Id=sa; Password=passDBFIADP#2024;MultipleActiveResultSets=true; Trust Server Certificate=True;"
+    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=FIAP-Fase1;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "TokenSettings": {
     "Secret": "36cf9fa24a431a01e0004acdade656db"
