--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,7 +8,7 @@ services:
              - 8000:1433
          environment:
              - ACCEPT_EULA=Y
-             - MSSQL_SA_PASSWORD=passDBFIADP#2024 
+             - MSSQL_SA_PASSWORD=myStong_Password123# 
 
     # fiap.tech.ui:
     #     container_name: FiapUIContainer
