--- a/src/FIAP.TECH.API/FIAP.TECH.API.csproj
+++ b/src/FIAP.TECH.API/FIAP.TECH.API.csproj
@@ -7,6 +7,9 @@
     <UserSecretsId>80e85ce6-2ec6-4064-b189-193c64287795</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+	<NoWarn>$(NoWarn);1591</NoWarn>
+	<ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
